--- a/style.css
+++ b/style.css
@@ -20,6 +20,10 @@ p{
     margin-bottom: 0;
 }
 
+a:hover{
+    text-decoration: none;
+}
+
 section{
     padding: 100px 0;
 }
@@ -90,4 +94,40 @@ section{
     max-width: 800px;
     margin: 0 auto 60px auto;
     text-align: center;
+}
+
+.qs-container{
+    position: relative;
+    overflow: hidden;
+    margin: 10px 0;
+    border-radius: 2px;
+}
+
+.qs-container img{
+    -moz-transition: all 0.8s;
+    -webkit-transition:all 0.8s;
+    transition: all 0.8s;
+    margin-left: 70px;
+}
+
+.qs-container:hover img{
+    -moz-transforms: scale(1.2);
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+
+}
+
+.qs-details{
+    position: absolute;
+    bottom: 25px;
+    left: 80px;
+    z-index: 9000;
+}
+
+.qs-details a h2,.qs-details a p{
+    color: #ffffff;
+}
+
+.qs-details h2{
+    margin-bottom: 0px;
 }
