--- a/style.css
+++ b/style.css
@@ -67,6 +67,11 @@ section{
 
 }
 
+.text-dark{
+    color: #1a1a1a;
+    margin-left: auto;
+}
+
 .nav-link {color:black;}
 .nav-link:hover {color: #aaaaaa;}
 
