--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,9 @@ body{
     color: #f0f5f9;
 }
 
+#header{
+    margin-top: 120px;
+}
 .header-content-left{
     font-family: 'Fredoka One', cursive;
     text-align: center;
@@ -36,17 +39,56 @@ body{
     height: auto;
 }
 
-#bout{
+#about-one{
     background-color: #c9d6df;
     color: black;
     padding: 50px 0 30px 0;
     text-align: center;
     margin-top: 40px;
-    border: solid 3px;
+    margin-bottom: 40px;
+    border: solid 2px;
     border-left:none;
     border-right:none;
 }
-.about-one img{
+
+.about-right h1{
+    margin-right: 15%;
+}
+
+.about-right p{
+    margin-top: 30px;
+    margin-right: 15%;
+}
+
+#agenda h1{
+    margin-left: 10%;
+}
+#agenda a{
+    margin-left: 20%;
+}
+
+.col-sm-8{
+    margin-left: 17%;
+}
+
+#contact{
+    text-align: center;
+    margin-top: 5%;
+}
+
+.contact-left h1{
+    text-align: left;
     
-    width: 100%;
+}
+
+.contact-left{
+    text-align: left;
+    margin-left: 15%;
+    margin-right: 20%;
+}
+
+.contact-right{
+    text-align: left;
+    margin-left: 25%;
+    margin-right: 30%
 }
