--- a/sobreNosotros.css
+++ b/sobreNosotros.css
@@ -1,6 +1,15 @@
+.encabezado{
+    color: aqua;
+    position: relative;
+    top: 180px;
+    text-align: center;
+}
+
 .sobreNosotros{
     width: 70%;
     position: relative;
-    left: 200px;
+    left: 250px;
     top: 200px;
+    font-size: 30px;
+    text-align:justify;
 }
