--- a/css/style.css
+++ b/css/style.css
@@ -1,64 +1,78 @@
-body{
+body {
     font-family: 'PT Sans', sans-serif;
     margin: 0;
     padding: 0;
-
 }
-.contenedor{
-    background-image: url("../img/fondo1.png");;
+
+.contenedor {
+    background-image: url("../img/fondo1.png");
+    ;
     position: relative;
     bottom: 50px;
     height: 700px;
     width: 100%;
 }
-.navbar{
-    background-color: rgb(0, 0, 0,0.6); 
+
+.navbar {
+    background-color: rgb(0, 0, 0, 0.6);
 }
-.navbar-brand{
+
+.navbar-brand {
     color: #fff;
     font-family: 'Bungee Shade', cursive;
     font-size: 30px;
     margin-left: 5%;
 }
-.navbar-brand:hover{color: #f0f5f9;}
-.nav-link{
+
+.navbar-brand:hover {
+    color: #f0f5f9;
+}
+
+.nav-link {
     color: #fff;
     margin-right: 40px;
     font-size: 17px;
 }
-.nav-link:hover{
+
+.nav-link:hover {
     color: #f0f5f9;
 }
 
-
-#header{
+#header {
     margin-top: 0px;
 }
-.header-content-left{
+
+.header-content-left {
     font-family: 'PT Sans', sans-serif;
     text-align: center;
 }
-.header-content-left h1{
+
+.header-content-left h1 {
     position: relative;
     top: 200px;
     right: 200px;
     color: #fff;
     font-size: 50px;
 }
-.header-content-left p{
+
+.header-content-left p {
     position: relative;
     top: 200px;
     right: 200px;
     text-align: justify;
-    color: #fff;;
+    color: #fff;
+    ;
 }
-.header-content-left a{
+
+.header-content-left a {
     position: relative;
     top: 200px;
     right: 200px;
     text-align: justify;
-    color: #fff;;
+    color: #fff;
+    ;
 }
+
 
 /*.header-content-right img{
     width: 100%;
@@ -67,7 +81,7 @@ body{
     top: 150px;
 }*/
 
-#about-one{
+#about-one {
     background-color: #c9d6df;
     color: black;
     padding: 50px 0 30px 0;
@@ -75,31 +89,32 @@ body{
     margin-top: 40px;
     margin-bottom: 40px;
     border: solid 2px;
-    border-left:none;
-    border-right:none;
+    border-left: none;
+    border-right: none;
 }
 
-.about-right h1{
+.about-right h1 {
     margin-right: 15%;
 }
 
-.about-right p{
+.about-right p {
     margin-top: 30px;
     margin-right: 15%;
 }
 
-#agenda h1{
+#agenda h1 {
     margin-left: 10%;
 }
-#agenda a{
+
+#agenda a {
     margin-left: 20%;
 }
 
-.contact-left h1{
+.contact-left h1 {
     text-align: left;
 }
 
-.contact-left{
+.contact-left {
     text-align: left;
     margin-left: 15%;
     margin-right: 20%;
@@ -107,26 +122,29 @@ body{
     margin-bottom: 15%;
 }
 
-.contact-right{
+.contact-right {
     text-align: left;
     margin-left: 25%;
     margin-right: 30%;
     margin-top: 15%;
     margin-bottom: 15%;
 }
+
 .btn2 {
     margin: 5px 5px;
-    background:#fff ;
-    color:#000 ;
+    background: #fff;
+    color: #000;
     font-size: 18px;
     padding: 5px 10px;
     display: inline-block;
     position: relative;
     right: 30px;
 }
+
 .redondeado {
     border-radius: 100px;
 }
+
 .nav-item {
     position: relative;
     top: 5px;
