--- a/css/agenda.css
+++ b/css/agenda.css
@@ -2,14 +2,11 @@
     background-color: black;
 }
 
-section {
-    margin-top: 10%;
+#agenda {
+    margin-top: 5%;
 }
 
-.p {
-    margin-left: 10%;
-    margin-top: 5%;
-    margin-right: 5%;
-    background-color: rgb(211, 211, 219);
-    border-radius: 5px;
+.Repositorio{
+    margin-top: 3%;
+    margin-left: 5%;
 }
