--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,5 @@
 body {
     font-family: 'PT Sans', sans-serif;
-    margin: 0;
-    padding: 0;
 }
 
 .contenedor {
@@ -12,9 +10,13 @@ body {
     height: 700px;
     width: 100%;
 }
-
+.navbar-toggler{
+    font-size : 48px;
+}
 .navbar {
     background-color: rgb(0, 0, 0, 0.6);
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,.05);
+    min-height: 100px;
 }
 
 .navbar-brand {
