--- a/css/contacto.css
+++ b/css/contacto.css
@@ -1,41 +1,11 @@
-.encabezado{
-    color: aqua;
-    position: relative;
-    top: 280px;
-    left: 750px;
-    /*text-align: center;*/
+.navbar {
+    background-color: black;
 }
 
-.sobreNosotros{
-    width: 70%;
-    position: relative;
-    left: 250px;
-    top: 340px;
-    font-size: 30px;
-    text-align:justify;
-}
-.btn2 {
-    margin: 10px 10px;
-    background:#fff ;
-    color:#000 ;
-    font-size: 18px;
-    padding: 15px 20px;
-    display: inline-block;
-    position: relative;
-    right: 40px;
-}
-.redondeado {
-    border-radius: 100px;
-}
-.nav-item {
-    position: relative;
-    top: 23px;
-    right: 50px;
-}
 .video-container{
           /*posision abosluta*/
     z-index:  -100;                 /*se envia el video al fondo*/
-   margin-top: 90px;                    /*pixel superior disstancia*/
+   margin-top: 70px;                    /*pixel superior disstancia*/
     left : -20px ;                      /*pixel desde la izquierda dist*/
     width: 100%;                    /*ancho base*/
     height:  calc(100vw * 0.4000); /*el alto de la pantalla 5625*/ 
@@ -117,4 +87,7 @@
     background: none !important;
     height: 500px;
     width: 755px;
+}
+.fisinova-title{
+    margin-top: 20px;
 }
