--- a/css/contacto.css
+++ b/css/contacto.css
@@ -5,13 +5,15 @@
 .video-container{
           /*posision abosluta*/
     z-index:  -100;                 /*se envia el video al fondo*/
-   margin-top: 70px;                    /*pixel superior disstancia*/
+   margin-top: 60px;                    /*pixel superior disstancia*/
     left : -20px ;                      /*pixel desde la izquierda dist*/
     width: 100%;                    /*ancho base*/
     height:  calc(100vw * 0.4000); /*el alto de la pantalla 5625*/ 
     overflow: hidden;               /*todo lo q se salga de lfgift se oculte */
     
 }
+
+
 .video-container video{
   
     top: -60px;
@@ -46,6 +48,9 @@
     background: linear-gradient(-90deg , #8e2de2 , #4A00E0);
 
 }
+.titulo{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
 /*tarjeta3*/
 .card-header-third{
     margin-top: -25px;
@@ -54,17 +59,24 @@
     background: linear-gradient(-90deg , #11998e , #38ef7d);
 
 }
+
 .card-section-third span i{
-        padding:  17px;
+    padding: 17px;
         margin: 0px 10px;
-        color : #fff;
+        color: #fff;
         height: 50px;
+        width: 50 px ;
         box-shadow:  1px 6 px 24px #d2d2d2;
         background: linear-gradient(-90deg , #11998e , #38ef7d);
+
 }
+.card-header-third span i:hover,.card-section-third spain i:hover{
+    box-shadow: 1px 1px 15px #000;
+}
+    
 /*efecto shadows para todas las tarjetas*/
 .card-section{
-    box-shadow: 0 2 px 5 px 0 rgba(0,0 ,0, .16) , 0 2px 10px 0 rgba(0,0 ,0, .12);
+    box-shadow: 0 2px 5px 0 rgba(0,0 ,0, .16) , 0 2px 10px 0 rgba(0,0 ,0, .12);
 }
 /*Para el efecto sombra al pasar por encima el mouse*/
 .card-section:hover{
@@ -75,6 +87,11 @@
 }
 .text{
  color: #fff;   
+}
+.text-line{
+    color: #fff;
+    font-family:'Bodoni Moda', serif ;
+
 }
 .mapouter {
     position: relative;
@@ -90,4 +107,10 @@
 }
 .fisinova-title{
     margin-top: 20px;
+}
+.fisinova-txt{
+    font-family: 'Bodoni Moda', serif;
+}
+.fisinova-txt2{
+    font-family:'Playfair Display SC', serif;
 }
