--- a/css/sobreNosotros.css
+++ b/css/sobreNosotros.css
@@ -2,8 +2,24 @@
     background-color: black;
 }
 .Texto{
-    margin-top: 100px;
+    margin-top: 5px;
+    padding: 20px;
+    color:beige ;
+    background: linear-gradient(-50deg, #344723,rgb(60, 61, 61) );}
+.sobreNosotros{
+   
+    font-family: cursive;
 }
-.sobreNostros{
-    margin-top: 50px;
+.titulo{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.imagen1{
+    margin-top: 60px;
+    width: 100%;
+}
+.img{
+    width: 100%;
+}
+.accordion-button{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
