--- a/css/agenda.css
+++ b/css/agenda.css
@@ -24,7 +24,7 @@
     margin-top: 50px;
     min-height: 90vh;
     background-repeat: no-repeat;
-    width: auto;
+    width: 100%;
     background-position: center;
     background-attachment: fixed;
     border-image: auto;
@@ -33,4 +33,89 @@
 }
 .agenda{
     margin-top: 50px;
+    width: 100%;
+
+}
+iframe{
+    width: 100%;
+height: 90vh;
+}
+.base{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin: auto;
+
+
+}
+.base .textBase h6{
+   color: #00bf7f;
+   font-weight: 800;
+   font-size: 1rem;
+   letter-spacing: 2px;
+ 
+}
+.base .textBase h2{
+    color: #080808;
+    font-weight: 700;
+    font-size: 2.7rem;
+
+    
+ }
+ .base .textBase p{
+    color: #080808;
+    font-weight: 400;
+    font-size: 1.1rem;
+    letter-spacing: 0.5px; 
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    justify-content: flex-start;
+   
+}
+.textBase{
+    margin-left: 50px;
+}
+.textBase h6{
+    color: #00bf7f;
+    font-weight: 800;
+    font-size: 1rem;
+    letter-spacing: 2px;
+  
+ }
+ .textBase h2{
+    color: #080808;
+    font-weight: 700;
+    font-size: 2.7rem;
+    margin-right: 50px;
+    
+ }
+ .textBase1{
+    margin-left: 50px;
+}
+.textBase1 h6{
+    color: #00bf7f;
+    font-weight: 800;
+    font-size: 1rem;
+    letter-spacing: 2px;
+  
+ }
+ .textBase1 h2{
+    color:rgb(244, 247, 242);
+    font-weight: 700;
+    font-size: 2.7rem;
+    margin-right: 50px;
+    
+ }
+.BASE{
+    margin-left: 40px;
+}
+.galeri{
+    width: 100%;
+}
+.base_contenido{
+    margin-top:1px;
+    background-color: black;
+   
+    height: 120%;
+    width: 100%;
 }
