--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ body {
     color: black;
     padding: 50px 0 30px 0;
     text-align: center;
-   
+   font-family: 'Times New Roman', Times, serif;
     margin-bottom: 40px;
     border: solid 2px;
     border-left: none;
